# C-Optimization-DCT

./: .gitignore  CMakeLists.txt  README.md  generate_test_output.txt  loeffler_2d_fixed_asm.s  run_dct2d.m  run_valgrind.sh  tester.cmake
.github/workflows/: c-cpp.yml
cachegrind/: cachegrind.out.2434
include/: dct.h
include/dct/: loeffler.h  loeffler_2d_fixed.h  loeffler_2d_fixed_asm.h  loeffler_2d_fixed_inline.h  loeffler_2d_fixed_macro.h  loeffler_asm.h  loeffler_fixed.h  loeffler_float.h  naive.h  twostep_efficient.h  twostep_slow.h
include/util/: constants.h  helpers.h  round.h
output/: output1.txt
scripts/: run_dct2d.m  vm_run_valgrind.sh
src/: dct.c  main.c
src/dct/: loeffler.c  loeffler_2d_fixed.c  loeffler_2d_fixed_asm.c  loeffler_2d_fixed_inline.c  loeffler_2d_fixed_macro.c  loeffler_asm.c  loeffler_fixed.c  loeffler_float.c  naive.c  twostep_efficient.c  twostep_slow.c
src/util/: helpers.c
test/: 240x360_random  64_byte_checker  64_byte_input  64_byte_random
tests/unix/: output0.expected  output1.expected  output2.expected  output3.expected  output6.expected
tests/windows/: output4.expected
valgrind/: callgrind.out-240x360_random-release-O0  callgrind.out-240x360_random-release-O1  callgrind.out-240x360_random-release-O2  callgrind.out-240x360_random-release-O3  dct.output  dct_O0.output  dct_O1.output  dct_O2.output  dct_O3.output  dct_OFast.output  dct_finline_functions.output  dct_funroll_loops.output  dct_max.output  output.txt
